Thu Jan  6 18:51:48 2005  Tim Janik  <timj@gtk.org>

	* tools/bwtwave.cc (store): store wave xinfos. adapt to BSE changes.
	renamed wave_xinfos class field.

Tue Jan  4 23:58:20 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c:
	* beast-gtk/bstfiledialog.c: throw proper error message after 
	failing to load a wave file.

	* tools/bwtwave.cc (store): adapt to .bsewave format changes.
	if possible, store mix-freq only once.

	* tools/bsewavetool.cc: added xinfo handling.

Sun Jan  2 15:24:17 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* beast-gtk/dialogs/Makefile.am: Use Scheme identifier style for
	zintern names.

Sun Jan  2 13:28:50 2005  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/architecture.texi: Started documenting xinfos for wave files.

Fri Dec 31 14:15:08 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* tools/bsefextract.cc: Added casts to fix signedness compiler
	warnings.

Fri Dec 31 04:04:33 2004  Tim Janik  <timj@gtk.org>

	* tools/bsewavetool.[hc]*: fixed error handling.
	added oggenc command to encode bsewave files.

	* tools/bwtwave.[hc]*: allow exchanging the data handle with a
	temporary wave file.

	* beast-gtk/bstfiledialog.c (store_bse_file): altered temporary
	file name for better readability.

Fri Dec 31 01:49:02 2004  Tim Janik  <timj@gtk.org>

	* tools/bsewavetool.cc: properly initialize random numbers.
	support command implementations. support arg parsing for
	commands and command execution. support loading and creation
	of empty bsewave files. support storing of bsewave files,
	preserving Ogg/Vorbis compression.

	* tools/bwtwave.cc: support overwriting of existing files.
	store Ogg/Vorbis data handles as Ogg/Vorbis (i.e. don't unpack).

Wed Dec 29 03:45:52 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* library/scripts/Makefile.am:
	* library/scripts/mixer-splitup-by-track.scm: Added a script which
	assigns all tracks to new mixer busses.

Mon Dec 27 23:58:48 2004  Tim Janik  <timj@gtk.org>
