@@ -1,3 +1,7 @@
+Thu Jan  6 23:58:38 2005  Tim Janik  <timj@gtk.org>
+
+	* tools/bsewavetool.cc: added -k option for continue-on-error behaviour.
+
 Thu Jan  6 18:51:48 2005  Tim Janik  <timj@gtk.org>
 
 	* tools/bwtwave.cc (store): store wave xinfos. adapt to BSE changes.
